# Software2021

./: .gitignore  README.md  pieceOfShift.sln  server.py  test_server.c  typeMapping.py
.github/workflows/: blank.yml
POS/: .gitignore  CMakeLists.txt  POS.pro
POS/assets/images/: images.qrc
POS/src/: customplotitem.cpp  main.cpp  qml.qrc
POS/src/Decoding/: canserver.cpp  decoder.cpp  decoder.h  filehandler.cpp  filehandler.h
POS/src/Frontend/: AccelerometerPage.qml  CellularGrid.qml  Chart.qml  Chart3D.qml  ConnectionExample.qml  ControlButtons.qml  CustomMenuBar.qml  CustomizableChartPage.qml  DetailedBatteryPage.qml  ExampleComponent.qml  InverterPage.qml  MechanicalDetails.qml  NetworkInfoPage.qml  Semicircle.qml  SignalSymbol.qml  SimpleChart.qml  Speedometer.qml  StartupPage.qml  StateIndication.qml  Thermometer.qml  main.qml
POS/src/Processing/: datamanager.cpp  datamanager.h  datastructs.h  plotdata.h
PieceOfShift/: .qmake.stash  CMakeLists.txt  Chart.qml  ControlButtons.qml  CustomMenuBar.qml  DistanceSlider.qml  FindDatatype.cpp  FindDatatype.h  PieceOfShift.pro  PreviewPage.qml  ProcessingUnit.cpp  SimpleChart.qml  Speedometer.qml  StateIndication.qml  Thermometer.qml  VelocityProcessingUnit.cpp  VelocityProcessingUnit.h  accelerationprocessingunit.cpp  accelerationprocessingunit.h  accelerationvelocityunit.cpp  accelerationvelocityunit.h  assets.qrc  canSpiltter.cpp  canframes.cpp  canframes.h  canspiltter.cpp  datamanager.cpp  datamanager.h  main.cpp  main.qml  managedatatype.cpp  managedatatype.h  pieceOfShift.vcxproj  poddatasender.cpp  poddatasender.h  processingunit.cpp  processingunit.h  qml.qrc  testComp.qml  testPage.qml  (+6 more)
PieceOfShift/assets/images/: images.qrc
PieceOfShift/debug/: pieceOfShift.exe.recipe  pieceOfShift.ilk  pieceOfShift.vcxproj.FileListAbsolute.txt  testProject.exe.recipe  testProject.ilk  testProject.vcxproj.FileListAbsolute.txt
PieceOfShift/debug/qmake/temp/: props.txt  qtvars.pro
PieceOfShift/include/qcustomplot/: qcustomplot.cpp
PieceOfShift/release/: testProject.exe.recipe  testProject.vcxproj.FileListAbsolute.txt
PieceOfShift/release/qmake/temp/: qtvars.pro
PieceOfShift/src/: CustomPlotItem.cpp  CustomPlotItem.h  customplotitem.cpp  customplotitem.h  main.cpp  qml.qrc
PieceOfShift/src/Decoding/: canserver.cpp  canserver.h  canspiltter.cpp  cansplitter.cpp  cansplitter.h  decoder.cpp  decoder.h  filehandler.cpp  filehandler.h  managedatatype.cpp  managedatatype.h  poddatasender.cpp
PieceOfShift/src/Frontend/: Battery.qml  BrakesPage.qml  Cell.qml  CellularGrid.qml  Chart.qml  Chart3D.qml  ControlButtons.qml  CreateDynamicGrid.js  CustomChart.qml  CustomMenuBar.qml  CustomizableChartPage.qml  DetailedBatteryPage.qml  DistanceSlider.qml  InverterPage.qml  MechanicalDetails.qml  MovementsDetailed.qml  MultiLineChart.qml  NetworkInfo.qml  NetworkInfoPage.qml  PodState.qml  PreviewPage.qml  Semicircle.qml  SignalSymbol.qml  SimpleChart.qml  Speedometer.qml  StartupPage.qml  StateIndication.qml  Thermometer.qml  Tilitmeter.qml  Tiltmeter.qml  VCUChecklist.qml  ValueTable.qml  main.qml
PieceOfShift/src/Processing/: accelerationprocessingunit.cpp  accelerationprocessingunit.h  accelerationvelocityunit.cpp  datamanager.cpp  datamanager.h  datastructs.h  plotdata.h  processingunit.cpp  processingunit.h  velocityprocessingunit.cpp
PieceOfShift/src/Tests/: BackendTest.h
PieceOfShift/testProject/: Page1.qml  Page1Form.ui.qml  TemplateTest.qml  TemplateTestForm.ui.qml  button_script.js  main.cpp  main.qml  testProject.pro
PieceOfShift/testProject/debug/qmake/: qtvars_Win32_Debug.props
PieceOfShift/testProject/debug/qmake/temp/: 05221D14-F05E-3A7B-94F0-D217EE1F4374.testProject.designtime.idx  qtvars_Win32_Debug.props
PieceOfShift/testProject/release/qmake/: qtvars_Win32_Release.props
PieceOfShift/testProject/release/qmake/temp/: 05221D14-F05E-3A7B-94F0-D217EE1F4374.testProject.designtime.idx
PieceOfShift/testProject/release/testProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  testProject.lastbuildstate  testProject.write.1u.tlog
Test_decoder_data_fetch/: Test_decoder_data_fetch.pro  canframes.cpp  canframes.h  connection.cpp  connection.h  main.cpp
scripts/: MessageIDs.csv  generate_struct.py  server.py  typeMapping.py
